fix: scrollbar jump

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,13 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  overflow-y: scroll;
+  ::-webkit-scrollbar {
+    width: 4px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 4px;
+  }
+}
